kubernetes/project-darwin-manifest.yaml
# Database Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      labels:
        io.kompose.service: db
    spec:
      containers:
        - image: samdroberts/ddb
          name: db
          ports:
            - containerPort: 3306

---
# Database Service
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: db

---
# Web App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dw
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dw
  template:
    metadata:
      labels:
        io.kompose.service: dw
    spec:
      containers:
        - image: samdroberts/dw
          name: dw
          ports:
            - containerPort: 9090

---
# Web App Service
apiVersion: v1
kind: Service
metadata:
  name: dw
spec:
  type: ClusterIP
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: dw

---
# Priyanka App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dp
  template:
    metadata:
      labels:
        io.kompose.service: dp
    spec:
      containers:
        - image: samdroberts/dp
          name: dp
          ports:
            - containerPort: 8443

---
# Priyanka App Service
apiVersion: v1
kind: Service
metadata:
  name: dp
spec:
  type: ClusterIP
  ports:
    - name: "8443"
      port: 8443
      targetPort: 8443
  selector:
    io.kompose.service: dp
